# usgamingclub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: config.py  logging.py  main.py
app/api/: automation.py  deps.py  health.py  operations.py
app/backends/: base.py  context.py  diagnostics.py  registry.py  usernames.py
app/captcha/: anticaptcha.py  base.py
app/db/: engine.py  models.py  repositories.py
app/operations/: dispatch.py  executor.py  result_cache.py
app/postflight/: effects.py
app/preflight/: checks.py
app/schemas/: operations.py  requests.py  results.py
app/security/: hmac.py
app/tools/: ping.py
app/webhook/: client.py  payload.py
app/worker/: settings.py  tasks.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: architecture.md  diagnostics-contract-arcadia-diff.md  runbook.md
tests/: conftest.py
tests/integration/: test_automation_endpoints.py  test_executor.py  test_executor_cache.py  test_firekirin_integration.py  test_full_loop.py  test_gameroom_integration.py  test_gamevault_integration.py  test_goldentreasure_integration.py  test_health.py  test_milkyway_integration.py  test_operations_endpoint.py  test_orionstars_integration.py  test_pandamaster_integration.py  test_ultrapanda_integration.py  test_vblink_integration.py  test_yolo_integration.py
tests/unit/: test_aspnet_client.py  test_aspnet_errors.py  test_aspnet_login.py  test_aspnet_parsers.py  test_aspnet_passwords.py  test_aspnet_session.py  test_backend_base.py  test_captcha_anticaptcha.py  (+51 more)
(+55 files in other folders)
