[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "casino-game-service"
version = "0.1.0"
description = "Python game service driving external game backends for the Laravel casino-app."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "arq>=0.26",
    "redis>=5.0",
    "structlog>=24.1",
    "pycryptodome>=3.20",
]

[project.optional-dependencies]
# Production runtime MySQL driver. Installed in Docker only; the test suite uses
# sqlite+aiosqlite and never imports asyncmy (SQLAlchemy loads the driver lazily on connect).
prod = [
    "asyncmy>=0.2.9",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "aiosqlite>=0.20",
    "aiomysql>=0.2",
    "fakeredis>=2.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
